@@ -296,7 +296,7 @@ check_conffiles(const char *dir)
       ohshite(_("empty string from fgets reading conffiles"));
 
     if (conffilename[n - 1] != '\n')
-      ohshit(_("conffile name '%.50s...' is too long, or missing final newline"),
+      ohshit(_("conffile name '%s' is too long, or missing final newline"),
              conffilename);
 
     conffilename[n - 1] = '\0';
