@@ -12,6 +12,8 @@ dpkg (1.17.6) UNRELEASED; urgency=low
   * Remove trailing newlines from dpkg-deb warning message.
   * Change dpkg-deb conffile name length warning into an error, as dpkg will
     reject those packages at install time anyway.
+  * Unify and clarify dpkg-deb and dpkg conffile name length error message.
+    Closes: #108196
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
